k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc

spec:
  selector:
    app: node-app
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
